Bug 550322 - [OOPP] Hulu full screen deadlock protection doesn't trap all cases. r=bent.